# gh-project-offline

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  VISION.md  gh-project-offline.example.toml  pyproject.toml
.github/workflows/: python-publish.yml
docs/: GETTING_STARTED.md  RELEASING.md  TESTING.md
src/gh_project_offline/: __init__.py  cli.py  config.py  db.py  github_api.py  runtime.py  service.py
tests/: test_cli.py  test_config.py  test_db.py  test_github_api.py  test_runtime.py  test_service.py
